fix(device) detect brand Nokia model common feat(device) detect brand Samsung model: GALAXY A71 5G (SM-A716U), GALAXY A21 (SM-A215U), GALAXY A31 (SM-A315G) feat(device) detect brand Motorola models: Moto G Power, Moto G7 Power, Moto G6 Plus, One Action feat(device) detect brand Positivo BGH model: Twist Mini feat(device) detect brand X-TIGI model: V19 feat(device) detect brand Huawei model: Y6p (MED-LX9N)

--- a/Tests/fixtures/smartphone-8.yml
+++ b/Tests/fixtures/smartphone-8.yml
@@ -8090,7 +8090,7 @@
   device:
     type: smartphone
     brand: MR
-    model: Moto g6 plus
+    model: Moto G6 Plus
   os_family: Android
   browser_family: Chrome
 - 
