--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -336,7 +336,7 @@ Nokia:
     - regex: 'NOKIA;? 1520\.1'
       model: 'Lumia 1520.1'
 
-    - regex: 'Nokia ([A-Za-z0-9\. ]+)(?: Build|[_);/])'
+    - regex: 'Nokia ([A-Za-z0-9\. ]+)(?: Build|\))'
       model: '$1'
 
     - regex: 'Nokia(N[0-9]+)'
@@ -5587,7 +5587,7 @@ Minix:
 
 # Huawei
 Huawei:
-  regex: '(HW-)?(?:Huawei|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]|CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))[);/ ])|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|NIC-LX1A|MRX-(AL09|W09)|CDY-([AT]N00|AN90)|GLK-[AT]L00|JER-[AT]N10|ELS-(?:[AT]N00|NX9)|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL00|LX9N)|NTS-AL00|ART-[AT]L00[xm]|JEF-[AT]N00|MED-[AT]L00|EBG-AN[01]0|ANA-[AT]N00|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-AN00a?|TAH-AN00m|C8817D|T1-821W|d-01J|d-02[HK]|HWT31|Y320-U10|Y541-U02|VAT-L19|605HW'
+  regex: '(HW-)?(?:Huawei|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]|CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))[);/ ])|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|NIC-LX1A|MRX-(AL09|W09)|CDY-([AT]N00|AN90)|GLK-[AT]L00|JER-[AT]N10|ELS-(?:[AT]N00|NX9)|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL00|LX9N)|NTS-AL00|ART-[AT]L00[xm]|JEF-[AT]N00|MED-(?:[AT]L00|LX9N)|EBG-AN[01]0|ANA-[AT]N00|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-AN00a?|TAH-AN00m|C8817D|T1-821W|d-01J|d-02[HK]|HWT31|Y320-U10|Y541-U02|VAT-L19|605HW'
   device: 'smartphone'
   models:
     - regex: 'POT-[TA]L00a[);/ ]'
@@ -5650,6 +5650,8 @@ Huawei:
       model: 'Enjoy 9e'
     - regex: 'U8665[);/ ]'
       model: 'Fusion 2'
+    - regex: 'MED-LX9N[);/ ]'
+      model: 'Y6p'
     - regex: 'G735-L(?:03|12|23)[);/ ]'
       model: 'G Play'
     - regex: 'CHC-U(?:0[13]|23)[);/ ]'
@@ -8953,6 +8955,12 @@ Motorola:
       model: 'Moto X2'
     - regex: '(?:MOT-|Motorola-)?XT1254'
       model: 'Droid Turbo'
+    - regex: 'moto g power'
+      model: 'Moto G Power'
+    - regex: 'moto g\(([0-9])\) power'
+      model: 'Moto G$1 Power'
+    - regex: 'moto g\(([0-9])\) plus'
+      model: 'Moto G$1 Plus'
     - regex: '(?:MOT-|Motorola-)?XT10(?:28|3[1234]|68|69)'
       model: 'Moto G'
     - regex: '(?:MOT-|Motorola-)?XT1799-2'
@@ -8993,6 +9001,8 @@ Motorola:
       model: 'One Vision'
     - regex: '(?:MOT-|Motorola-)?one zoom'
       model: 'One Zoom'
+    - regex: 'motorola one action'
+      model: 'One Action'
 
     - regex: 'Moto ([CGEXZ]) ?\(([a-z0-9]+)\)( Plus| Play)?'
       model: 'Moto $1$2$3'
@@ -11096,6 +11106,8 @@ Samsung:
       model: 'GALAXY A7 (2018)'
     - regex: '(?:SAMSUNG-)?SM-A71(?:5[FW])?[);/ ]'
       model: 'GALAXY A71'
+    - regex: '(?:SAMSUNG-)?SM-A716U[);/ ]'
+      model: 'GALAXY A71 5G'
     - regex: '(?:SAMSUNG-)?SM-A(?:530F|800[0FISY])|SCV32'
       model: 'GALAXY A8'
     - regex: '(?:SAMSUNG-)?SM-G885[FSY]'
@@ -11128,6 +11140,8 @@ Samsung:
       model: 'GALAXY A11'
     - regex: '(?:SAMSUNG-)?SM-(?:A205(?:[FGSWU]|YN|U1)|S205DL)|SC-02M|SCV46'
       model: 'GALAXY A20'
+    - regex: '(?:SAMSUNG-)?SM-A215U[);/ ]'
+      model: 'GALAXY A21'
     - regex: '(?:SAMSUNG-)?SM-A217F[);/ ]'
       model: 'GALAXY A21s'
     - regex: '(?:SAMSUNG-)?SM-A202[FG]'
@@ -11138,7 +11152,7 @@ Samsung:
       model: 'GALAXY A30'
     - regex: '(?:SAMSUNG-)?SM-A307(?:FN|GN|GT|[FG])'
       model: 'GALAXY A30s'
-    - regex: '(?:SAMSUNG-)?SM-A315[FN][);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-A315[FNG][);/ ]'
       model: 'GALAXY A31'
     - regex: '(?:SAMSUNG-)?SM-A405(?:F[NM]|S)'
       model: 'GALAXY A40'
@@ -15275,6 +15289,8 @@ X-TIGI:
       device: 'tablet'
     - regex: 'X-TIGI[_ ]V28[_ ]LTE'
       model: 'V28 LTE'
+    - regex: 'X[-_]TIGI[_ ]V19'
+      model: 'V19'
     - regex: 'X-TIGI[_ ]Photo[_ ]P11'
       model: 'Photo P11'
     - regex: 'X[-_]TIGI[ _-]([^/;)]+) Build'
@@ -16151,7 +16167,7 @@ Multilaser:
 
 # Positivo BGH
 Positivo BGH:
-  regex: '(?:T1060B|S455|Positivo (?:Twist|Ypy)|Twist (?:\(2018\)|2 (?:Fit|Pro)|Mini|Tab|Metal(?: 32GB)?|Max|XL|SE|[23SM]))[);/ ]'
+  regex: '(?:T1060B|S455|Positivo (?:Twist|Ypy)|Twist[ _](?:\(2018\)|2 (?:Fit|Pro)|Mini|Tab|Metal(?: 32GB)?|Max|XL|SE|[23SM]))[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'S455[);/ ]'
@@ -16164,7 +16180,7 @@ Positivo BGH:
       model: 'Twist Metal'
     - regex: 'Twist Max[);/ ]'
       model: 'Twist Max'
-    - regex: 'Twist Mini[);/ ]'
+    - regex: 'Twist[ _]Mini[);/ ]'
       model: 'Twist Mini'
     - regex: 'Twist 2 Fit[);/ ]'
       model: 'Twist 2 Fit'
