Add Roblox App detection and tests

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -249,3 +249,8 @@
 - regex: 'HeyTapBrowser/([\d\.]+)'
   name: 'HeyTapBrowser'
   version: '$1'
+
+# Roblox App
+- regex: 'RobloxApp/([\d\.]+)'
+  name: 'Roblox App'
+  version: '$1'
