--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -5185,3 +5185,23 @@
     model: Redmi Note 9
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 10; Infinix X656) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.101 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: "85.0.4183.101"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: phablet
+    brand: IF
+    model: Note 7
+  os_family: Android
+  browser_family: Chrome
