Add oss regex for short forms of win7 and win10

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -209,7 +209,7 @@
   name: 'Windows'
   version: '10'
 
-- regex: 'CYGWIN_NT-6.4|Windows NT 6.4|Windows 10'
+- regex: 'CYGWIN_NT-6.4|Windows NT 6.4|Windows 10|win 10'
   name: 'Windows'
   version: '10'
 
@@ -221,7 +221,7 @@
   name: 'Windows'
   version: '8'
 
-- regex: 'CYGWIN_NT-6.1|Windows NT 6.1|Windows 7'
+- regex: 'CYGWIN_NT-6.1|Windows NT 6.1|Windows 7|win7'
   name: 'Windows'
   version: '7'
 
