Add browser detection for GOGGalaxyClientIncluded browser test

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2852,3 +2852,12 @@
     version: 4.3.0.153
     engine: Blink
     engine_version: ""
+-
+  user_agent: GOGGalaxyClient/2.0.20.39 (GOG Galaxy) 83b6745cff679691b69876bc7ee33e05e5d90bda (win10 x64)
+  client:
+    type: browser
+    name: GOG Galaxy
+    short_name: GO
+    version: 2.0.20.39
+    engine: ''
+    engine_version: ''
