--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1747,3 +1747,9 @@
   version: '$1'
   engine:
     default: 'Gecko'
+
+# GOG Galaxy
+- regex: 'GOGGalaxyClient/(?:(\d+[\.\d]+))?'
+  name: 'GOG Galaxy'
+  version: '$1'
+  
