--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -5186,6 +5186,26 @@
   os_family: Android
   browser_family: Chrome
 - 
+  user_agent: Mozilla/5.0 (Linux; U; Android 10; fr-fr; Infinix X690 Build/QP1A.190711.020) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.116 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: "79.0.3945.116"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: phablet
+    brand: IF
+    model: Note 7
+  os_family: Android
+  browser_family: Chrome
+- 
   user_agent: Mozilla/5.0 (Linux; Android 10; Infinix X656) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.101 Mobile Safari/537.36
   os:
     name: Android
@@ -5202,6 +5222,6 @@
   device:
     type: phablet
     brand: IF
-    model: Note 7
+    model: Note 7 lite
   os_family: Android
   browser_family: Chrome
