Fixed naming convention

--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -5222,6 +5222,6 @@
   device:
     type: phablet
     brand: IF
-    model: Note 7 lite
+    model: Note 7 Lite
   os_family: Android
   browser_family: Chrome
