Detect Roblox Android version
Change app name

--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -552,7 +552,7 @@
     platform: ""
   client:
     type: mobile app
-    name: Roblox App
+    name: Roblox
     version: 2.448.411159
   device:
     type: smartphone
@@ -569,7 +569,7 @@
     platform: ""
   client:
     type: mobile app
-    name: Roblox App
+    name: Roblox
     version: 2.448.411159
   device:
     type: smartphone
