--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -98,10 +98,13 @@
 ##########
 # Android
 ##########
+- regex: '[ ]([\d\.]+)\) AppleWebKit.*ROBLOX Android App'
+  name: 'Android'
+  version: '$1'
+
 - regex: '(?:(?:Orca-)?Android|Adr)[ /](?:[a-z]+ )?(\d+[\.\d]*)'
   name: 'Android'
   version: '$1'
-  
   
 - regex: 'Android|Silk-Accelerated=[a-z]{4,5}'
   name: 'Android'
