feat(device) detect brand Nokia model: 3.1 Plus feat(device) detect brand Lenovo models: Vibe B (A2016a40), Z5s (L78071), S5 Pro (L58041), A3 (L18021) feat(device) detect brand Motorola model: Moto X Style (XT1572) feat(device) detect brand Neffos model: X20 Pro feat(device) detect brand Nomi model: Space M (i5510) feat(device) detect brand Oppo model: Reno 2 (CPH1907) feat(device) detect brand Samsung model: GALAXY J3 (2017) (SM-J330FN) feat(device) detect brand AllDocube model: iPlay 10 Pro 10.1" (U1006)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -242,6 +242,8 @@ Nokia:
       model: '5.1 Plus'
     - regex: 'Nokia 5\.1'
       model: '5.1'
+    - regex: 'Nokia 3\.1 Plus'
+      model: '3.1 Plus'
     - regex: 'Nokia 3\.1'
       model: '3.1'
     - regex: 'Nokia 2\.1'
@@ -7754,10 +7756,18 @@ Lenovo:
       model: 'Vibe P1m'
     - regex: 'P1a42[/;) ]'
       model: 'Vibe P1'
+    - regex: 'A2016a40[/;) ]'
+      model: 'Vibe B'
     - regex: 'Z90a40[/;) ]'
       model: 'Vibe Shot'
     - regex: 'S1a40[/;) ]'
       model: 'Vibe S1'
+    - regex: 'L78071[/;) ]'
+      model: 'Z5s'
+    - regex: 'L58041[/;) ]'
+      model: 'S5 Pro'
+    - regex: 'L18021[/;) ]'
+      model: 'A3'
     - regex: 'Lenovo ([^/;]*) Build'
       model: '$1'
     - regex: '(?:LNV-|Lenovo-)?Lenovo[ \-_]?([a-z0-9_+\-]+)'
@@ -9011,6 +9021,8 @@ Motorola:
       model: 'Moto X'
     - regex: '(?:MOT-|Motorola-)?XT1562'
       model: 'Moto X Play'
+    - regex: '(?:MOT-|Motorola-)?XT1572'
+      model: 'Moto X Style'
     - regex: '(?:MOT-|Motorola-)?XT1080'
       model: 'Droid Ultra'
     - regex: '(?:MOT-|Motorola-)?XT1650-05'
@@ -9269,6 +9281,8 @@ Neffos:
       model: 'C5L'
     - regex: 'Neffos[_ ]Y50'
       model: 'Y50'
+    - regex: 'Neffos X20 Pro'
+      model: 'X20 Pro'
     - regex: 'Neffos[_ ]((?:Y|N|C|X)[0-9][A-Z]?(?: Max| Lite)?)'
       model: '$1'
 
@@ -9379,7 +9393,7 @@ Nomu:
 
 # Nomi
 Nomi:
-  regex: 'Nomi[ _-]|(C101010 Ultra2|i501[234]|i5032|i5050|i5532|C0(700(?:[02358]|2HD)|7850)|C1010[0-3])[;/) ]'
+  regex: 'Nomi[ _-]|(C101010 Ultra2|i501[234]|i5032|i5050|i5510|i5532|C0(700(?:[02358]|2HD)|7850)|C1010[0-3])[;/) ]'
   device: 'smartphone'
   models:
     - regex: 'i501[23][;/) ]'
@@ -9394,6 +9408,8 @@ Nomi:
       model: 'Beat M'
     - regex: 'i5532[;/) ]'
       model: 'Space X2'
+    - regex: 'i5510[;/) ]'
+      model: 'Space M'
     - regex: 'C101010 Ultra2'
       model: 'Ultra 2'
       device: 'tablet'
@@ -9969,7 +9985,7 @@ OPPO:
       model: 'Reno 10X'
     - regex: 'CPH1919[);/ ]'
       model: 'Reno 10X Zoom'
-    - regex: 'PCKM00[);/ ]'
+    - regex: '(?:PCKM00|CPH1907)[);/ ]'
       model: 'Reno 2'
     - regex: 'CPH1989[);/ ]'
       model: 'Reno 2F'
@@ -11256,7 +11272,7 @@ Samsung:
       model: 'GALAXY J3 (2015)'
     - regex: '(?:SAMSUNG-)?SM-J320(?:FN|R4|W8|[AFGHMNPV])'
       model: 'GALAXY J3 (2016)'
-    - regex: '(?:SAMSUNG-)?SM-(?:J330[08FGLN]|J327(?:R7|U))[);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-(?:J330(?:[08FGLN]|FN)|J327(?:R7|U))[);/ ]'
       model: 'GALAXY J3 (2017)'
     - regex: '(?:SAMSUNG-)?SM-J337(?:[AWPUV]|VPP)[);/ ]'
       model: 'GALAXY J3 (2018)'
@@ -15630,11 +15646,13 @@ Sunvell:
 
 # AllDocube (https://www.alldocube.com/)
 AllDocube:
-  regex: '(?:T1001XS|iPlay_20)[);/ ]'
+  regex: '(?:T1001XS|iPlay_20|U1006)[);/ ]'
   device: 'tablet'
   models:
     - regex: 'T1001XS[);/ ]'
       model: 'M5XS'
+    - regex: 'U1006[);/ ]'
+      model: 'iPlay 10 Pro 10.1"'
     - regex: 'iPlay_20[);/ ]'
       model: 'iPlay 20'
 
