feat(device) detect brand Karbonn models: Titanium Jumbo 2, Titanium Jumbo
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8269,7 +8269,7 @@ Konrow:
 
 # Karbonn
 Karbonn:
-  regex: '(?:Browser-)?Karbonn|K9 Kavach 4G|K9 Music 4G|K9 Smart|K9 VIRAAT 4G|Titanium Vista 4G'
+  regex: '(?:Browser-)?Karbonn|K9 Kavach 4G|K9 Music 4G|K9 Smart|K9 VIRAAT 4G|Titanium (?:Vista 4G|Jumbo)'
   device: 'smartphone'
   models:
     - regex: 'K9 Kavach 4G'
@@ -8294,6 +8294,10 @@ Karbonn:
       model: 'Titanium S99'
     - regex: 'Titanium Vista 4G'
       model: 'Titanium Vista 4G'
+    - regex: 'Titanium Jumbo 2'
+      model: 'Titanium Jumbo 2'
+    - regex: 'Titanium Jumbo'
+      model: 'Titanium Jumbo'
     - regex: 'Karbonn ([a-z0-9]+) WAP-Browser'
       model: '$1'
       device: 'feature phone'
