feat(device) detect brand TCL model: C5 (5152D)
issue #6322

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12585,13 +12585,15 @@ T-Mobile:
 
 # Tcl
 TCL:
-  regex: 'TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|A502DL|T780H|5199I|7040N|5133A|5159[AJ])[);/ ]'
+  regex: 'TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|A502DL|T780H|5199I|7040N|5133A|5159[AJ]|5152D)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'TCLGalaG60(?:\(9108A\))?[);/ ]'
       model: 'Gala G60'
     - regex: '5199I[);/ ]'
       model: 'C9'
+    - regex: '5152D[);/ ]'
+      model: 'C5'
     - regex: '5133A[);/ ]'
       model: 'L5'
     - regex: 'T780H[);/ ]'
