feat(device) detect new brand X-BO model: V7, V8, V10, V11, V8+, V9+ feat(device) detect brand Advan model: S40 feat(device) detect brand Aiwa model: AW500 feat(device) detect brand Karbonn models: Aura Note Play, Aura Sleek Plus feat(device) detect brand Acer models: Iconia One 7 (B1-7A0)), Iconia One 8 (B1-860A), Iconia One 10 (B3-A42, B3-A40)
issue #6322

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -838,7 +838,7 @@ Bravis:
 
 # Acer
 Acer:
-  regex: 'acer|(?<!Satellite |ZTE BLADE |ImSmart |ERGO |X-Style Tab )a(?:101|110|2[10]0|211|50[10]|51[10]|70[10])[);/ ]|Android.*V3[67]0[);/ ]|Android.*Z1[23456]0 Build|Android.*Z5\d{2} Build|Android.*T0[234678] Build|Android.*S55[);/ ]|(?:A1-(713(HD)?|7[23]4|830|841|840FHD|81[01])|A3-A[1234][01]|B1-(7[1235-8][01](HD)?|7[23]3|8[1235]0|A71)|B3-(A[125]0|A3[02]|A40FHD)|E39)[);/ ]|S5[12]0 Build|(DA[0-9]+HQ?L|Aspire V5-121|Predator G9-793|GT-810|B1-870)[);/ ]'
+  regex: 'acer|(?<!Satellite |ZTE BLADE |ImSmart |ERGO |X-Style Tab )a(?:101|110|2[10]0|211|50[10]|51[10]|70[10])[);/ ]|Android.*V3[67]0[);/ ]|Android.*Z1[23456]0 Build|Android.*Z5\d{2} Build|Android.*T0[234678] Build|Android.*S55[);/ ]|(?:A1-(713(HD)?|7[23]4|830|841|840FHD|81[01])|A3-A[1234][01]|B1-(7[1235-8][01](HD)?|7[23]3|7A0|8[1235]0|A71|860A)|B3-(A[125]0|A3[02]|A40FHD)|E39)[);/ ]|S5[12]0 Build|(DA[0-9]+HQ?L|Aspire V5-121|Predator G9-793|GT-810|B1-870|B3-A4[02])[);/ ]'
   device: 'smartphone'
   models:
     # smart displays
@@ -874,7 +874,7 @@ Acer:
     - regex: 'A3-A[34]0'
       model: 'Iconia Tab 10'
       device: 'tablet'
-    - regex: 'B1-7[5678]0|B1-730HD'
+    - regex: 'B1-7(?:[5678]0|30HD|A0)'
       model: 'Iconia One 7'
       device: 'tablet'
     - regex: 'B1-7[123][01]|B1-A71'
@@ -883,10 +883,10 @@ Acer:
     - regex: 'B1-7[23]3'
       model: 'Iconia Talk 7'
       device: 'tablet'
-    - regex: 'B1-8[12357]0'
+    - regex: 'B1-8[123567]0'
       model: 'Iconia One 8'
       device: 'tablet'
-    - regex: 'B3-A([125]0|3[02]|40FHD)'
+    - regex: 'B3-A([125]0|3[02]|40FHD|4[02])'
       model: 'Iconia One 10'
       device: 'tablet'
     - regex: 'A101'
@@ -989,11 +989,13 @@ Acer:
 
 # Advan
 Advan:
-  regex: '(?:ADVAN M4|i7U|S45E|50[46]1|5059|S50H|I7D|i55[KD]|i4U|S7D|S4Z|i5[KE]|S5E[ _]NXT|S5J\+)[);/ ]'
+  regex: '(?:ADVAN (?:M4|S40)|i7U|S45E|50[46]1|5059|S50H|I7D|i55[KD]|i4U|S7D|S4Z|i5[KE]|S5E[ _]NXT|S5J\+)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'ADVAN M4'
       model: 'M4'
+    - regex: 'ADVAN S40'
+      model: 'S40'
     - regex: 'i7U'
       model: 'I Lite i7U'
     - regex: 'S5E[ _]NXT'
@@ -1032,11 +1034,13 @@ Airness:
 
 # Aiwa
 Aiwa:
-  regex: '(?:AW790|M300|AWM533)[);/ ]'
+  regex: '(?:AW790|M300|AWM533|AW500)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'AW790[);/ ]'
       model: 'AW790'
+    - regex: 'AW500[);/ ]'
+      model: 'AW500'
     - regex: 'AWM533[);/ ]'
       model: 'AWM533'
     - regex: 'M300[);/ ]'
@@ -8269,7 +8273,7 @@ Konrow:
 
 # Karbonn
 Karbonn:
-  regex: '(?:Browser-)?Karbonn|K9 Kavach 4G|K9 Music 4G|K9 Smart|K9 VIRAAT 4G|Titanium (?:Vista 4G|Jumbo)'
+  regex: '(?:Browser-)?Karbonn|K9 Kavach 4G|K9 Music 4G|K9 Smart|K9 VIRAAT 4G|Aura Sleek Plus|Aura Note Play|Titanium (?:Vista 4G|Jumbo)'
   device: 'smartphone'
   models:
     - regex: 'K9 Kavach 4G'
@@ -8286,6 +8290,10 @@ Karbonn:
       model: 'K9 Smart Yuva'
     - regex: 'K9 Smart'
       model: 'K9 Smart'
+    - regex: 'Aura Sleek Plus'
+      model: 'Aura Sleek Plus'
+    - regex: 'Aura Note Play'
+      model: 'Aura Note Play'
     - regex: 'karbonnK9 Viraat 4G|K9 VIRAAT 4G'
       model: 'K9 Viraat 4G'
     - regex: 'Titanium[ _]S2[ _]Plus'
@@ -16939,3 +16947,9 @@ Kenxinda:
   regex: 'Three[_ ]Proofings[_ ]W([5-9])[);/ ]'
   device: 'smartphone'
   model: 'Three Proofings W$1'
+
+# X-BO or XBO
+X-BO:
+  regex: 'X[-]?BO (V[78]|V1[01]|V[89]\+)[);/ ]'
+  device: 'smartphone'
+  model: '$1'
