feat(device) detect new brand Xgody models: Y17, X96 feat(device) detect brand Blu models: Dash L3,  Dash X2 feat(device) detect brand Fujitsu model: Arrows M03 feat(device) detect brand Hoffmann model: A700 feat(device) detect brand Maxwest model: Nitro 4 feat(device) detect brand Aligator model: RX510
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2239,7 +2239,7 @@ Bitel:
 
 # Blu
 Blu:
-  regex: 'BLU |(?:blu|Dash)[ _]([^/;]+) Build|Studio (5.0K|5.5|View XL|Mega|C 8\+8|C HD|C|G|Selfie LTE|Touch|M HD|M5 Plus|J[1258]|X|X8 HD)|Advance (4.0 ?[LM]|5.0(?: HD)?|A4)|ENERGY (DIAMOND|XL)|LIFE XL|Dash XL|PURE XL|Life One X2|GRAND 5.5 HD|R1 (HD|PLUS)|Tank Xtreme 5.0|Tank Xtreme Pro|STUDIO SELFIE'
+  regex: 'BLU |(?:blu|Dash)[ _]([^/;]+) Build|Studio (5.0K|5.5|View XL|Mega|C 8\+8|C HD|C|G|Selfie LTE|Touch|M HD|M5 Plus|J[1258]|X|X8 HD)|Advance (4.0 ?[LM]|5.0(?: HD)?|A4)|ENERGY (DIAMOND|XL)|LIFE XL|Dash (?:X[2L]|L3)|PURE XL|Life One X2|GRAND 5.5 HD|R1 (HD|PLUS)|Tank Xtreme 5.0|Tank Xtreme Pro|STUDIO SELFIE'
   device: 'smartphone'
   models:
    - regex: 'Advance (4.0 ?[LM]|4.0|5.0(?: HD)?|A4)'
@@ -2294,7 +2294,7 @@ Blu:
      model: 'Vivo Air LTE'
    - regex: 'DASH[ _]([^/;]+) Build'
      model: 'Dash $1'
-   - regex: 'DASH (5.0|L|M|X2|X)'
+   - regex: 'DASH (5.0|L3|L|M|X2|X)'
      model: 'Dash $1'
    - regex: 'blu[ _]([^/;]+) Build'
      model: '$1'
@@ -5041,7 +5041,7 @@ FNB:
 
 # Fujitsu
 Fujitsu:
-  regex: '(?:F-01[FHJKL]|F-02[EFGHLK]|F-03[DEFGH]|F-04[EGKJ]|F-05[DEFJ]|F-06E|F-07[DE]|F-08D|F-09[DE]|F-10D|F-41A|F-11D|F-12C|M532|FARTM933KZ|901FJ)[);/ ]'
+  regex: '(?:F-01[FHJKL]|F-02[EFGHLK]|F-03[DEFGH]|F-04[EGKJ]|F-05[DEFJ]|F-06E|F-07[DE]|F-08D|F-09[DE]|F-10D|F-41A|F-11D|F-12C|M532|FARTM933KZ|901FJ|arrowsM03)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'F-01F[);/ ]'
@@ -5106,6 +5106,8 @@ Fujitsu:
       model: 'F-12C'
     - regex: 'F-04J[);/ ]'
       model: 'F-04J'
+    - regex: 'arrowsM03[);/ ]'
+      model: 'Arrows M03'
 
     - regex: 'F-02F[);/ ]'
       model: 'Arrows Tab F-02F'
@@ -5533,10 +5535,10 @@ Hi-Level:
 
 # Hoffmann
 Hoffmann:
-  regex: '(HOFFMANN|Neo[_ ]A[139]00)[);/ ]'
+  regex: '(HOFFMANN|Neo[_ ]A[1379]00)[);/ ]'
   device: 'smartphone'
   models:
-    - regex: 'Neo[_ ](A[139]00)'
+    - regex: 'Neo[_ ](A[1379]00)'
       model: 'Neo $1'
     - regex: 'HOFFMANN[ _]X[-_ ](Prime|Twist|Max)'
       model: 'X $1'
@@ -8417,7 +8419,7 @@ Masstel:
 
 # Maxwest
 Maxwest:
-  regex: 'Astro_5N_LTE|Virtue Z5|Astro X55s'
+  regex: '(?:Astro_5N_LTE|Virtue Z5|Astro X55s|Nitro_4)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'Astro_5N_LTE'
@@ -8426,6 +8428,8 @@ Maxwest:
       model: 'Virtue Z5'
     - regex: 'Astro X55s'
       model: 'Astro X55s'
+    - regex: 'Nitro_4'
+      model: 'Nitro 4'
 
 # Maze
 Maze:
@@ -15882,7 +15886,7 @@ Aligator:
   regex: 'ALIGATOR[_);/ ]'
   device: 'smartphone'
   models:
-    - regex: 'ALIGATOR[ _](S4080|S50(?:6[56]|[678]0))[);/ ]'
+    - regex: 'ALIGATOR[ _](S4080|S50(?:6[56]|[678]0)|RX510)[);/ ]'
       model: '$1'
 
 # Maxcom
@@ -16962,3 +16966,15 @@ X-BO:
   regex: 'X[-]?BO (V[78]|V1[01]|V[89]\+)[);/ ]'
   device: 'smartphone'
   model: '$1'
+
+# Xgody
+Xgody:
+  regex: 'XGODY'
+  device: 'smartphone'
+  models:
+    - regex: 'XGODY Y17[);/ ]'
+      model: 'Y17'
+
+    - regex: 'XGODY_X96[);/ ]'
+      model: 'X96'
+      device: 'tv'
