feat(device) detect brand Vertex model: Impress Max
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15334,11 +15334,13 @@ Inoi:
 
 # Vertex
 Vertex:
-  regex: 'Lion_Dual|V709X|Baccara|Eagle[ _]4G|Impress[ _]([^;/]+)(?:Build|\))'
+  regex: 'Lion_Dual|V709X|Baccara|Eagle[ _]4G|ImpressMAX|Impress[ _]([^;/]+)(?:Build|\))'
   device: 'smartphone'
   models:
     - regex: '(Lion_Dual|Baccara|Eagle[ _]4G)'
       model: '$1'
+    - regex: 'ImpressMAX[)\; ]'
+      model: 'Impress Max'
     - regex: '(Impress[ _]([^;/]+))(?:Build|\))'
       model: '$1'
     - regex: '(V709X)'
@@ -16681,6 +16683,8 @@ Jinga:
       model: 'IGO L2'
     - regex: 'JINGA_IGO_M1[);/ ]'
       model: 'IGO M1'
+    - regex: 'Jinga Trezor S1 Plus[);/ ]'
+      model: 'Trezor S1 Plus'
 
 # Twoe
 Twoe:
