feat(device) detect brand Oppo models: A31 (CPH2031, CPH2015), A92 (CPH2059), Reno 3 (CPH2043), Reno 3 Pro (CPH2037, CPH2035, CPH2009),  Find X2 Pro (CPH2025), Find X2 (CPH2023), A91 (CPH2021, CPH2001), Reno 3A (CPH2013), Find X2 Lite (CPH2005), F11 Pro (CPH1987),  K3 (CPH1955), Reno 2Z (CPH1951)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9869,7 +9869,7 @@ OPPO:
       model: 'A37f$1'
     - regex: '(?:OPPO[ _]?)?CPH1605[);/ ]'
       model: 'A39'
-    - regex: '(?:CPH2081|CPH2073)[);/ ]'
+    - regex: 'CPH20(?:81|73|31|15)[);/ ]'
       model: 'A31'
     - regex: '(?:OPPO[ _]?)?(?:CPH18(?:0[35]|53)|PBBM30)[);/ ]'
       model: 'A3s'
@@ -9909,8 +9909,10 @@ OPPO:
       model: 'A9 (2020)'
     - regex: '(?:OPPO[ _]?)?CPH1938[);/ ]'
       model: 'A9 (EN)'
-    - regex: 'PCPM00[);/ ]'
+    - regex: '(?:PCPM00|CPH20[02]1)[);/ ]'
       model: 'A91'
+    - regex: 'CPH2059[);/ ]'
+      model: 'A92'
     - regex: 'PDKT00[);/ ]'
       model: 'A92s'
     - regex: 'PDKM00[);/ ]'
@@ -9927,7 +9929,7 @@ OPPO:
       model: 'F1 Plus'
     - regex: 'CPH1911[);/ ]'
       model: 'F11'
-    - regex: 'CPH1969[);/ ]'
+    - regex: 'CPH19(?:69|87)[);/ ]'
       model: 'F11 Pro'
     - regex: '(?:OPPO[ _]?)?A1601[);/ ]'
       model: 'F1s'
@@ -9967,14 +9969,18 @@ OPPO:
       model: 'Find X'
     - regex: '(?:OPPO[ _]?)?(?:PAHM00)[);/ ]'
       model: 'Find X Lamborghini'
-    - regex: '(?:OPPO[ _]?)?(PDEM10)[);/ ]'
+    - regex: '(?:OPPO[ _]?)?(?:PDEM10|CPH2023)[);/ ]'
       model: 'Find X2'
-    - regex: '(?:OPPO[ _]?)?(PDEM30|OPG01)[);/ ]'
+    - regex: '(?:OPPO[ _]?)?CPH2005[);/ ]'
+      model: 'Find X2 Lite'
+    - regex: '(?:OPPO[ _]?)?(?:PDEM30|OPG01|CPH2025)[);/ ]'
       model: 'Find X2 Pro'
     - regex: '(?:OPPO[ _]?)?R1011 Build'
       model: 'Joy Plus'
     - regex: '(?:OPPO[ _]?)?(PBC(?:M30|T10))[);/ ]'
       model: 'K1'
+    - regex: 'CPH1955[);/ ]'
+      model: 'K3'
     - regex: '(?:OPPO[ _]?)?(PCNM00)[);/ ]'
       model: 'K5'
     - regex: '(?:OPPO[ _]?)?N5117[);/ ]'
@@ -10039,11 +10045,15 @@ OPPO:
       model: 'Reno 2'
     - regex: 'CPH1989[);/ ]'
       model: 'Reno 2F'
-    - regex: '(?:PCKM80|CPH1945)[);/ ]'
+    - regex: '(?:PCKM80|CPH1945|CPH1951)[);/ ]'
       model: 'Reno 2Z'
+    - regex: 'CPH2043[);/ ]'
+      model: 'Reno 3'
+    - regex: 'CPH2013[);/ ]'
+      model: 'Reno 3A'
     - regex: 'PDCM00[);/ ]'
       model: 'Reno 3 5G'
-    - regex: 'PCRM00[);/ ]'
+    - regex: '(?:PCRM00|CPH203[57]|CPH2009)[);/ ]'
       model: 'Reno 3 Pro'
     - regex: 'CPH2113[);/ ]'
       model: 'Reno 4 4G'
