feat(device) detect brand Oppo models: Reno 5G (CPH1925), A5S (CPH1912, CPH1910), A7 (CPH1905), R15 Pro (CPH1833)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9883,9 +9883,9 @@ OPPO:
       model: 'A53'
     - regex: '(?:OPPO[ _]?)?CPH170[15][);/ ]'
       model: 'A57'
-    - regex: 'CPH1909[);/ ]'
+    - regex: 'CPH19(?:09|1[02])[);/ ]'
       model: 'A5S'
-    - regex: '(?:OPPO[ _]?)?(?:CPH1901|PBF[TM]00)[);/ ]'
+    - regex: '(?:OPPO[ _]?)?(?:CPH190[15]|PBF[TM]00)[);/ ]'
       model: 'A7'
     - regex: '(?:OPPO[ _]?)?(CPH1801|CPH1717)[);/ ]'
       model: 'A71'
@@ -10007,7 +10007,7 @@ OPPO:
       model: 'R11s Plus'
     - regex: '(?:OPPO[ _]?)?(?:CPH1835|PAC[TM]00|PAAM00)[);/ ]'
       model: 'R15'
-    - regex: '(?:OPPO[ _]?)?(?:CPH1831|PAAT00)[);/ ]'
+    - regex: '(?:OPPO[ _]?)?(?:CPH183[13]|PAAT00)[);/ ]'
       model: 'R15 Pro'
     - regex: 'PBCM10[);/ ]'
       model: 'R15x'
@@ -10065,7 +10065,7 @@ OPPO:
       model: 'Reno 4 5G'
     - regex: 'PDNM00[);/ ]'
       model: 'Reno 4 Pro 5G'
-    - regex: 'CPH1921[);/ ]'
+    - regex: 'CPH192[15][);/ ]'
       model: 'Reno 5G'
     - regex: 'PCLM10[);/ ]'
       model: 'Reno Ace'
