feat(browser) detect browser Opera disguise as Firefox
issue #6290

--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -671,7 +671,7 @@
   os_family: GNU/Linux
   browser_family: Firefox
 - 
-  user_agent: Mozilla/5.0 (X11; Linux x86_64; en; rv:2.0) Gecko/20100101 Firefox/4.0 Opera 11.64
+  user_agent: Mozilla/5.0 (X11; Linux x86_64; en; rv:2.0) Gecko/20100101 Firefox/4.0
   os:
     name: GNU/Linux
     short_name: LIN
@@ -6173,3 +6173,23 @@
     model: Satellite S855
   os_family: Windows
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X; U; en; rv:1.8.0) Gecko/20060728 Firefox/1.5.0 Opera 9.27
+  os:
+    name: Mac
+    short_name: MAC
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    short_name: OP
+    version: "9.27"
+    engine: Presto
+    engine_version: ""
+  device:
+    type: desktop
+    brand: AP
+    model: ""
+  os_family: Mac
+  browser_family: Opera
