--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -643,7 +643,7 @@
   version: '$1'
   engine:
     default: 'Servo'
-- regex: 'Firefox(?:/(\d+[\.\d]+))?'
+- regex: '(?!.*Opera[ /])Firefox(?:/(\d+[\.\d]+))?'
   name: 'Firefox'
   version: '$1'
   engine:
